@@ -1,29 +1,30 @@
 
-# 虚拟机参数
-
-
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 <!-- code_chunk_output -->
 
-* [虚拟机参数](#虚拟机参数)
 * [3 常用Java虚拟机参数](#3-常用java虚拟机参数)
 	* [3.1 掌握跟踪调试参数](#31-掌握跟踪调试参数)
+		* [查看JVM的配置说明](#查看jvm的配置说明)
+		* [JVM启动参数](#jvm启动参数)
+		* [JVM 默认参数](#jvm-默认参数)
 		* [3.1.1 跟踪垃圾回收-读懂虚拟机日志](#311-跟踪垃圾回收-读懂虚拟机日志)
 		* [3.1.2 类加载/卸载的跟踪](#312-类加载卸载的跟踪)
 		* [3.1.3 系统参数查看](#313-系统参数查看)
 	* [3.2 让性能飞起来：学习堆的配置参数](#32-让性能飞起来学习堆的配置参数)
+		* [3.2.1 最大堆和初始堆的设置](#321-最大堆和初始堆的设置)
+		* [3.2.2 新生代的配置](#322-新生代的配置)
 		* [3.2.3 堆溢出处理](#323-堆溢出处理)
-		* [3.4 Client和Server二选一](#34-client和server二选一)
-* [调试参数](#调试参数)
-* [java 虚拟机启动参数](#java-虚拟机启动参数)
-* [JVM系列三:JVM参数设置、分析(信息量大)](#jvm系列三jvm参数设置-分析信息量大)
-* [JVM启动参数大全](#jvm启动参数大全)
+	* [3.3 别让性能有缺口：了解非堆内存的参数配置](#33-别让性能有缺口了解非堆内存的参数配置)
+		* [3.3.1 方法区配置](#331-方法区配置)
+		* [3.3.2 栈配置](#332-栈配置)
+		* [3.3.3 直接内存配置](#333-直接内存配置)
+	* [3.4 Client和Server二选一](#34-client和server二选一)
 * [JVM 几个重要的参数](#jvm-几个重要的参数)
 	* [大内存使用](#大内存使用)
 * [JVM启动参数详解](#jvm启动参数详解)
 	* [行为参数：](#行为参数)
 	* [性能调优参数](#性能调优参数)
-	* [调试参数](#调试参数-1)
+	* [调试参数](#调试参数)
 
 <!-- /code_chunk_output -->
 
@@ -32,9 +33,56 @@
 
 # 3 常用Java虚拟机参数
 
+
+
 ## 3.1 掌握跟踪调试参数
 
+### 查看JVM的配置说明
+
+* [java 虚拟机启动参数 - 大毛过河的日志 - 网易博客 ](http://blog.163.com/wb_zhaoyuwei/blog/static/183075439201111524716439/)
+
+```bash
+java
+#java -X 命令查看JVM的配置说明
+java -X
+```
+
+### JVM启动参数
+
+* [JVM启动参数大全 zz - 岁月如哥 - BlogJava ](http://www.blogjava.net/midstr/archive/2008/09/21/230265.html)
+
+java启动参数共分为三类；
+* 其一是**标准参数（-）**，所有的JVM实现都必须实现这些参数的功能，而且向后兼容；
+* 其二是**非标准参数（-X）**，默认jvm实现这些参数的功能，但是并不保证所有jvm实现都满足，且不保证向后兼容；
+* 其三是**非Stable参数（-XX）**，此类参数各个jvm实现会有所不同，将来可能会随时取消，需要慎重使用；
+
+### JVM 默认参数
+
+* [JVM 默认参数 - 天天备忘录 ](http://blog.btnotes.com/articles/375.html)
+
+有时候你会需要了解JVM相关的参数，不管是出于好奇或者工作需要。Oracle的文档中列出了一些，（http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html）， 但这些并不是全部，而且有些参数的设置会默认启用或者关闭其他一些参数，而在某些情况下设置某个参数是不会生效的。还有些时候你想让JVM做某些事情，但是你不知道那个参数可以用。下面介绍一些办法用以列出所有参数，这样你在研究或者Google的时候也比较有明确的目标。
+
+```sh
+#1、查看你使用的JDK支持的参数
+java -XX:+UnlockDiagnosticVMOptions -XX:+PrintFlagsFinal -version
+#2、查看某个JVM参数是否生效
+#先使用jps查找到jvm的pid，然后使用jinfo
+jinfo -flag UseParallelOldGC 881
+-XX:–UseParallelOldGC
+#减号表示关闭，加号表示开启
+```
+
 ### 3.1.1 跟踪垃圾回收-读懂虚拟机日志
+
+
+`-XX:+PrintGC`
+```bash
+[GC (Metadata GC Threshold)  4668K->1248K(125952K), 0.0023475 secs]
+#                              ^      ^     ^           ^
+#                            GC前    GC后  总可用堆   GC花费时间
+```
+`-XX:+PrintCGDetials`
+
 
 ```bash
 #java编译UTF-8
@@ -79,19 +127,114 @@ java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintCl
 ```bash
 # PrintVMOptions打印虚拟机显示命令行参数
 java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintVMOptions -XX:+PrintGC com.gmail.mosoft521.ch03.trace.UnloadClass
+# PrintCommandLineFlags隐式和显式
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintCommandLineFlags -XX:+PrintGC com.gmail.mosoft521.ch03.trace.UnloadClass
+# PrintFlagsFinal所有
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintFlagsFinal -XX:+PrintGC com.gmail.mosoft521.ch03.trace.UnloadClass
 ```
 
 
 
 ## 3.2 让性能飞起来：学习堆的配置参数
 
-### 3.2.3 堆溢出处理
+
+
+* [成为Java GC专家（5）—Java性能调优原则 - ImportNew ](http://www.importnew.com/13954.html)
+
+### 3.2.1 最大堆和初始堆的设置
 
 ```sh
-java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -Xmx20m -Xms5m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./a.dump com.gmail.mosoft521.ch03.heap.DumpOOM
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -Xmx20m -Xms5m -XX:+PrintCommandLineFlags -XX:+PrintGCDetails -XX:+UseSerialGC com.gmail.mosoft521.ch03.heap.HeapAlloc
 ```
 
-### 3.4 Client和Server二选一
+### 3.2.2 新生代的配置
+
+* **-Xmn**设置新生代的大小。－Xmn 是将NewSize与MaxNewSize设为一致。设置一个较大的新生代会减少老年代的大小。（eden+ 2 survivor space)。年轻代大小(1.4or later)
+* -XX:**NewSize**=n :设置年轻代大小下限。(for 1.3/1.4)
+* -XX:**MaxNewSize**=n :设置年轻代大小上限。(for 1.3/1.4)
+  * 可以通过指定**NewSize和MaxNewSize**来代替NewRatio
+* –XX:**NewRatio**来指定新生代和整个堆的大小比例
+  * 新生代(eden+2*s)和老年代（不包含永久代）的比值
+  * 4 表示 新生代：老年代=1:4，即年轻代占堆的1/5
+* **SurvivorRatio**设置新生代中eden空间和from/to空间的比例关系。XX:SurvivorRatio=eden/from=eden/to
+  * 设置两个Survivor区与eden的比
+  * 8表示两个Survivor:eden = 2:8，即一个Survivor占年轻代的1/10
+
+Java HotSpot(TM) 64-Bit Server VM warning: NewSize (1536k) is greater than the MaxNewSize (1024k). A new max generation size of 1536k will be used.
+
+* [JVM系列三:JVM参数设置、分析 - redcreen - 博客园 ](http://www.cnblogs.com/redcreen/archive/2011/05/04/2037057.html)
+
+
+* [Java 堆内存 新生代 （转） - JUN王者 - 博客园 ](http://www.cnblogs.com/junwangzhe/p/6282550.html)
+
+默认的，新生代 ( Young ) 与老年代 ( Old ) 的比例的值为 1:2 ( 该值可以通过参数 –XX:NewRatio 来指定 )，即：新生代 ( Young ) = 1/3 的堆空间大小。
+
+老年代 ( Old ) = 2/3 的堆空间大小。其中，新生代 ( Young ) 被细分为 Eden 和 两个 Survivor 区域，这两个 Survivor 区域分别被命名为 from 和 to，以示区分。
+
+默认的，Edem : from : to = 8 : 1 : 1 ( 可以通过参数 –XX:SurvivorRatio 来设定 )，即： Eden = 8/10 的新生代空间大小，from = to = 1/10 的新生代空间大小。
+
+JVM 每次只会使用 Eden 和其中的一块 Survivor 区域来为对象服务，所以无论什么时候，总是有一块 Survivor 区域是空闲着的。
+
+因此，新生代实际可用的内存空间为 9/10 ( 即90% )的新生代空间。
+
+* [Home: Java Platform, Standard Edition (Java SE) 8 Release 8 ](http://docs.oracle.com/javase/8/)
+* [Java Language and Virtual Machine Specifications ](https://docs.oracle.com/javase/specs/index.html)
+
+
+```sh
+# eden space 5632K,from space 512K,to space 512K
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -Xmx20m -Xms20m -XX:+PrintGCDetails com.gmail.mosoft521.ch03.heap.newsize.NewSizeDemo
+# -XX:SurvivorRatio=2
+# eden space 3584K,from space 1536K,to space 1536K
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -Xmx20m -Xms20m -XX:SurvivorRatio=2 -XX:+PrintGCDetails com.gmail.mosoft521.ch03.heap.newsize.NewSizeDemo
+# -Xmn2m -XX:SurvivorRatio=2
+# 触发一次新生代GC，对eden区进行部分回收，所有数组都分配在老年代
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -Xmx20m -Xms20m -Xmn2m -XX:SurvivorRatio=2 -XX:+PrintGCDetails com.gmail.mosoft521.ch03.heap.newsize.NewSizeDemo
+# -Xmn7m -XX:SurvivorRatio=2
+# 出现3次新生代GC。所有的内存分配在新生代进行，部分新生代对象晋升到老年代
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -Xmx20m -Xms20m -Xmn7m -XX:SurvivorRatio=2 -XX:+PrintGCDetails com.gmail.mosoft521.ch03.heap.newsize.NewSizeDemo
+# -Xmn15m -XX:SurvivorRatio=8
+# eden space 12288K,from space 1536K,to space 1536K
+# eden区占用12288K，满足10MB数组的分配，分配行为在eden进行。没有触发GC。
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -Xmx20m -Xms20m -Xmn15m -XX:SurvivorRatio=8 -XX:+PrintGCDetails com.gmail.mosoft521.ch03.heap.newsize.NewSizeDemo
+# -XX:NewRatio=2
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -Xmx20M -Xms20M -XX:NewRatio=2 -XX:+PrintGCDetails com.gmail.mosoft521.ch03.heap.newsize.NewSizeDemo
+```
+
+
+### 3.2.3 堆溢出处理
+
+
+
+```sh
+# HeapDumpOnOutOfMemoryError 
+# HeapDumpPath导出堆的存放路径
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -Xmx20m -Xms5m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./a.dump com.gmail.mosoft521.ch03.heap.DumpOOM
+# 在发生错误时执行一个脚本文件
+# jps获取pid
+jstack -F 344
+-XX:OnOutOfMemoryError=printstack.bat
+```
+
+## 3.3 别让性能有缺口：了解非堆内存的参数配置
+
+### 3.3.1 方法区配置
+
+1.6,1.7
+-XX:PermSize初始的永久区大小
+-XX:MaxPermSize最大永久区
+
+### 3.3.2 栈配置
+
+-Xss指定线程的栈大小
+
+### 3.3.3 直接内存配置
+
+-XX:MaxDirectMemorySize设置最大可用直接内存
+
+直接内存访问快，申请空间慢
+
+## 3.4 Client和Server二选一
 
 使用-XX:+PrintFlagsFinal参数查看给定参数的默认值。
 
@@ -103,129 +246,6 @@ java -XX:+PrintFlagsFinal -client -version|grep -E ' CompileThreshold|MaxHeapSiz
 java -XX:+PrintFlagsFinal -server -version|grep -E ' CompileThreshold|MaxHeapSize'
 ```
 
-
-# 调试参数
-
-`-XX:+PrintGC`
-```bash
-[GC (Metadata GC Threshold)  4668K->1248K(125952K), 0.0023475 secs]
-#                              ^      ^     ^           ^
-#                            GC前    GC后  总可用堆   GC花费时间
-```
-
-`-XX:+PrintCGDetials`
-
-# java 虚拟机启动参数
-
-[java 虚拟机启动参数 - 大毛过河的日志 - 网易博客 ](http://blog.163.com/wb_zhaoyuwei/blog/static/183075439201111524716439/)
-
-```bash
-java
-java -X
-```
-
-# JVM系列三:JVM参数设置、分析(信息量大)
-
-[JVM系列三:JVM参数设置、分析 - redcreen - 博客园 ](http://www.cnblogs.com/redcreen/archive/2011/05/04/2037057.html)
-
-经验&&规则
-
-年轻代大小选择
-响应时间优先的应用:尽可能设大,直到接近系统的最低响应时间限制(根据实际情况选择).在此种情况下,年轻代收集发生的频率也是最小的.同时,减少到达年老代的对象.
-吞吐量优先的应用:尽可能的设置大,可能到达Gbit的程度.因为对响应时间没有要求,垃圾收集可以并行进行,一般适合8CPU以上的应用.
-避免设置过小.当新生代设置过小时会导致:1.YGC次数更加频繁 2.可能导致YGC对象直接进入旧生代,如果此时旧生代满了,会触发FGC.
-年老代大小选择
-响应时间优先的应用:年老代使用并发收集器,所以其大小需要小心设置,一般要考虑并发会话率和会话持续时间等一些参数.如果堆设置小了,可以会造成内存碎 片,高回收频率以及应用暂停而使用传统的标记清除方式;如果堆大了,则需要较长的收集时间.最优化的方案,一般需要参考以下数据获得:
-并发垃圾收集信息、持久代并发收集次数、传统GC信息、花在年轻代和年老代回收上的时间比例。
-吞吐量优先的应用:一般吞吐量优先的应用都有一个很大的年轻代和一个较小的年老代.原因是,这样可以尽可能回收掉大部分短期对象,减少中期的对象,而年老代尽存放长期存活对象.
-较小堆引起的碎片问题
-因为年老代的并发收集器使用标记,清除算法,所以不会对堆进行压缩.当收集器回收时,他会把相邻的空间进行合并,这样可以分配给较大的对象.但是,当堆空间较小时,运行一段时间以后,就会出现"碎片",如果并发收集器找不到足够的空间,那么并发收集器将会停止,然后使用传统的标记,清除方式进行回收.如果出现"碎片",可能需要进行如下配置:
--XX:+UseCMSCompactAtFullCollection:使用并发收集器时,开启对年老代的压缩.
--XX:CMSFullGCsBeforeCompaction=0:上面配置开启的情况下,这里设置多少次Full GC后,对年老代进行压缩
-用64位操作系统，Linux下64位的jdk比32位jdk要慢一些，但是吃得内存更多，吞吐量更大
-XMX和XMS设置一样大，MaxPermSize和MinPermSize设置一样大，这样可以减轻伸缩堆大小带来的压力
-使用CMS的好处是用尽量少的新生代，经验值是128M－256M， 然后老生代利用CMS并行收集， 这样能保证系统低延迟的吞吐效率。 实际上cms的收集停顿时间非常的短，2G的内存， 大约20－80ms的应用程序停顿时间
-系统停顿的时候可能是GC的问题也可能是程序的问题，多用jmap和jstack查看，或者killall -3 java，然后查看java控制台日志，能看出很多问题。(相关工具的使用方法将在后面的blog中介绍)
-仔细了解自己的应用，如果用了缓存，那么年老代应该大一些，缓存的HashMap不应该无限制长，建议采用LRU算法的Map做缓存，LRUMap的最大长度也要根据实际情况设定。
-采用并发回收时，年轻代小一点，年老代要大，因为年老大用的是并发回收，即使时间长点也不会影响其他程序继续运行，网站不会停顿
-JVM参数的设置(特别是 –Xmx –Xms –Xmn -XX:SurvivorRatio  -XX:MaxTenuringThreshold等参数的设置没有一个固定的公式，需要根据PV old区实际数据 YGC次数等多方面来衡量。为了避免promotion faild可能会导致xmn设置偏小，也意味着YGC的次数会增多，处理并发访问的能力下降等问题。每个参数的调整都需要经过详细的性能测试，才能找到特定应用的最佳配置。
-promotion failed:
-
-垃圾回收时promotion failed是个很头痛的问题，一般可能是两种原因产生，第一个原因是救助空间不够，救助空间里的对象还不应该被移动到年老代，但年轻代又有很多对象需要放入救助空间；第二个原因是年老代没有足够的空间接纳来自年轻代的对象；这两种情况都会转向Full GC，网站停顿时间较长。
-
-解决方方案一：
-
-第一个原因我的最终解决办法是去掉救助空间，设置-XX:SurvivorRatio=65536 -XX:MaxTenuringThreshold=0即可，第二个原因我的解决办法是设置CMSInitiatingOccupancyFraction为某个值（假设70），这样年老代空间到70%时就开始执行CMS，年老代有足够的空间接纳来自年轻代的对象。
-
-解决方案一的改进方案：
-
-又有改进了，上面方法不太好，因为没有用到救助空间，所以年老代容易满，CMS执行会比较频繁。我改善了一下，还是用救助空间，但是把救助空间加大，这样也不会有promotion failed。具体操作上，32位Linux和64位Linux好像不一样，64位系统似乎只要配置MaxTenuringThreshold参数，CMS还是有暂停。为了解决暂停问题和promotion failed问题，最后我设置-XX:SurvivorRatio=1 ，并把MaxTenuringThreshold去掉，这样即没有暂停又不会有promotoin failed，而且更重要的是，年老代和永久代上升非常慢（因为好多对象到不了年老代就被回收了），所以CMS执行频率非常低，好几个小时才执行一次，这样，服务器都不用重启了。
-
--Xmx4000M -Xms4000M -Xmn600M -XX:PermSize=500M -XX:MaxPermSize=500M -Xss256K -XX:+DisableExplicitGC -XX:SurvivorRatio=1 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSCompactAtFullCollection -XX:CMSFullGCsBeforeCompaction=0 -XX:+CMSClassUnloadingEnabled -XX:LargePageSizeInBytes=128M -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -XX:+PrintClassHistogram -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC -Xloggc:log/gc.log
-
- 
-
-CMSInitiatingOccupancyFraction值与Xmn的关系公式
-
-上面介绍了promontion faild产生的原因是EDEN空间不足的情况下将EDEN与From survivor中的存活对象存入To survivor区时,To survivor区的空间不足，再次晋升到old gen区，而old gen区内存也不够的情况下产生了promontion faild从而导致full gc.那可以推断出：eden+from survivor < old gen区剩余内存时，不会出现promontion faild的情况，即：
-(Xmx-Xmn)*(1-CMSInitiatingOccupancyFraction/100)>=(Xmn-Xmn/(SurvivorRatior+2))  进而推断出：
-
-CMSInitiatingOccupancyFraction <=((Xmx-Xmn)-(Xmn-Xmn/(SurvivorRatior+2)))/(Xmx-Xmn)*100
-
-例如：
-
-当xmx=128 xmn=36 SurvivorRatior=1时 CMSInitiatingOccupancyFraction<=((128.0-36)-(36-36/(1+2)))/(128-36)*100 =73.913
-
-当xmx=128 xmn=24 SurvivorRatior=1时 CMSInitiatingOccupancyFraction<=((128.0-24)-(24-24/(1+2)))/(128-24)*100=84.615…
-
-当xmx=3000 xmn=600 SurvivorRatior=1时  CMSInitiatingOccupancyFraction<=((3000.0-600)-(600-600/(1+2)))/(3000-600)*100=83.33
-
-CMSInitiatingOccupancyFraction低于70% 需要调整xmn或SurvivorRatior值。
-
-令：
-
-网上一童鞋推断出的公式是：:(Xmx-Xmn)*(100-CMSInitiatingOccupancyFraction)/100>=Xmn 这个公式个人认为不是很严谨，在内存小的时候会影响xmn的计算。
-
- 
-
-关于实际环境的GC参数配置见:实例分析   监测工具见JVM监测
-
-参考：
-
-JAVA HOTSPOT VM（http://www.helloying.com/blog/archives/164）
-
-JVM 几个重要的参数 (校长)
-
-java jvm 参数 -Xms -Xmx -Xmn -Xss 调优总结
-
-Java HotSpot VM Options
-
-http://bbs.weblogicfans.net/archiver/tid-2835.html
-
-Frequently Asked Questions About the Java HotSpot VM
-
-Java SE HotSpot at a Glance
-
-Java性能调优笔记(内附测试例子 很有用)
-
-说说MaxTenuringThreshold这个参数
-
- 
-
-相关文章推荐:
-
-GC调优方法总结
-
-Java 6 JVM参数选项大全（中文版）
-
-# JVM启动参数大全
-
-[JVM启动参数大全 zz - 岁月如哥 - BlogJava ](http://www.blogjava.net/midstr/archive/2008/09/21/230265.html)
-
-java启动参数共分为三类；
-* 其一是标准参数（-），所有的JVM实现都必须实现这些参数的功能，而且向后兼容；
-* 其二是非标准参数（-X），默认jvm实现这些参数的功能，但是并不保证所有jvm实现都满足，且不保证向后兼容；
-* 其三是非Stable参数（-XX），此类参数各个jvm实现会有所不同，将来可能会随时取消，需要慎重使用；
 
 
 # JVM 几个重要的参数
